--- a/Makefile.am
+++ b/Makefile.am
@@ -165,6 +165,10 @@ myhtopheaders = \
 	Vector.h \
 	XUtils.h
 
+if HAVE_BACKTRACE
+myhtopheaders += BacktraceScreen.h
+myhtopsources += BacktraceScreen.c
+endif
 # Linux
 # -----
 
