fix ci compilation

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,7 +33,6 @@ myhtopsources = \
 	AffinityPanel.c \
 	AvailableColumnsPanel.c \
 	AvailableMetersPanel.c \
-	BacktraceScreen.c \
 	BatteryMeter.c \
 	CategoriesPanel.c \
 	ClockMeter.c \
@@ -100,7 +99,6 @@ myhtopheaders = \
 	AffinityPanel.h \
 	AvailableColumnsPanel.h \
 	AvailableMetersPanel.h \
-	BacktraceScreen.h \
 	BatteryMeter.h \
 	CPUMeter.h \
 	CRT.h \
@@ -166,6 +164,10 @@ myhtopheaders = \
 	Vector.h \
 	XUtils.h
 
+if HAVE_BACKTRACE
+myhtopheaders += BacktraceScreen.h
+myhtopsources += BacktraceScreen.c
+endif
 # Linux
 # -----
 
