Update the man page for backtrace screen
Co-authored-by: Benny Baumann <BenBE@geshi.org>
Co-authored-by: Kang-Che Sung <explorer09@gmail.com>

--- a/htop.1.in
+++ b/htop.1.in
@@ -271,6 +271,9 @@ Pause/resume process updates.
 .B m
 Merge exe, comm and cmdline, where applicable. (This is a toggle key.)
 .TP
+.B b
+Show the backtrace of a process, where applicable. (This is a toggle key.)
+.TP
 .B Ctrl-L
 Refresh: redraw screen and recalculate values.
 .TP
